# bevy-pixel-perfect

./: .gitignore  Cargo.toml
assets/shaders/: blit.wgsl
examples/: basic.rs  cell_shade.rs
src/: axonometric.rs  camera.rs  cell_shade.wgsl  commands.rs  lib.rs  materials.rs  render_target.rs  upscale.wgsl
