[package]
name = "bevy-pixel-perfect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10", features = ["jpeg"] }
bevy_mod_debugdump = "0.7"

[dev-dependencies]
bevy-inspector-egui = "0.18"
